- fixed bug in SCIPmakeIndicatorFeasible() in cons_indicator.c
- fixed bug with conflict clause modification in cons_indicator
- fixed bug in cons_bounddisjunction with uninitialized return values
- fixed bug with setting type of slack variables to be implicitly integral
- fixed bug when copying problem data in c++ case returned with the result SCIP_DIDNOTRUN

parameters
- changed parameter "propagating/pseudoobj/maxcands" to "propagating/pseudoobj/minuseless" (see prop_pseudoobj.h)
  due to revision of the pseudo objective propagator


SCIP version 2.1.0
===============

interface:

- new method SCIPstartSolvingTime() and SCIPstopSolvingTime() which can be used to start or stop the solving time clock
- new methods SCIPcheckCumulativeCondition(), SCIPpropCumulativeCondition, and SCIPrespropCumulativeCondition in
  cons_cumulative.h; these methods can be used to check, propagate, or resolve the propagation of a cumulative condition
- new methods SCIPstrToRealValue() and SCIPstrCopySection() in pub_misc.h; these methods can be used to convert a string
  into a SCIP_Real value and to copy a substring.
- the methods SCIPwriteVarName() SCIPwriteVarsList(), and SCIPwriteVarsLinearsum() have a new parameter named "type" of
  type SCIP_Bool which determines if the variable type should be written or not
- the methods SCIPparseVarName() and SCIPparseVarsList() got one new output parameter "endptr" which is filled with the
  position where the parsing stopped
- new functions SCIPround() and SCIPfeasRound() to round to nearest integer
- new functions SCIPcomputeVarCurrent{L,U}b{Local,Global}() to compute local or global lower or upper bounds of a
  multiaggregated variable from the bounds of the aggregation variables
- new method SCIPsetConsModifiable()
- new method SCIPgetNegatedVars() which returns all negated variables for a given array of variables, if the negated
  variables are not existing yet, they will be created