@@ -146,16 +146,19 @@ typedef struct SCIP_PropData SCIP_PROPDATA;       /**< locally defined propagato
  *  - scip            : SCIP main data structure
  *  - prop            : the propagator itself
  *  - nrounds         : number of presolving rounds already done
- *  - nnewfixedvars   : number of variables fixed since the last call to the presolver
- *  - nnewaggrvars    : number of variables aggregated since the last call to the presolver
- *  - nnewchgvartypes : number of variable type changes since the last call to the presolver
- *  - nnewchgbds      : number of variable bounds tightened since the last call to the presolver
- *  - nnewholes       : number of domain holes added since the last call to the presolver
- *  - nnewdelconss    : number of deleted constraints since the last call to the presolver
- *  - nnewaddconss    : number of added constraints since the last call to the presolver
- *  - nnewupgdconss   : number of upgraded constraints since the last call to the presolver
- *  - nnewchgcoefs    : number of changed coefficients since the last call to the presolver
- *  - nnewchgsides    : number of changed left or right hand sides since the last call to the presolver
+ *  - nnewfixedvars   : number of variables fixed since the last call to the presolving method
+ *  - nnewaggrvars    : number of variables aggregated since the last call to the presolving method
+ *  - nnewchgvartypes : number of variable type changes since the last call to the presolving method
+ *  - nnewchgbds      : number of variable bounds tightened since the last call to the presolving method
+ *  - nnewholes       : number of domain holes added since the last call to the presolving method
+ *  - nnewdelconss    : number of deleted constraints since the last call to the presolving method
+ *  - nnewaddconss    : number of added constraints since the last call to the presolving method
+ *  - nnewupgdconss   : number of upgraded constraints since the last call to the presolving method
+ *  - nnewchgcoefs    : number of changed coefficients since the last call to the presolving method
+ *  - nnewchgsides    : number of changed left or right hand sides since the last call to the presolving method
+ *
+ *  @note the counters state the changes since the last call including the changes of this presolving method during its
+ *        last call
  *
  *  input/output:
  *  - nfixedvars      : pointer to total number of variables fixed of all presolvers
@@ -175,10 +178,10 @@ typedef struct SCIP_PropData SCIP_PROPDATA;       /**< locally defined propagato
  *  possible return values for *result:
  *  - SCIP_UNBOUNDED  : at least one variable is not bounded by any constraint in obj. direction -> problem is unbounded
  *  - SCIP_CUTOFF     : at least one constraint is infeasible in the variable's bounds -> problem is infeasible
- *  - SCIP_SUCCESS    : the presolver found a reduction
- *  - SCIP_DIDNOTFIND : the presolver searched, but did not find a presolving change
- *  - SCIP_DIDNOTRUN  : the presolver was skipped
- *  - SCIP_DELAYED    : the presolver was skipped, but should be called again
+ *  - SCIP_SUCCESS    : the presolving method found a reduction
+ *  - SCIP_DIDNOTFIND : the presolving method searched, but did not find a presolving change
+ *  - SCIP_DIDNOTRUN  : the presolving method was skipped
+ *  - SCIP_DELAYED    : the presolving method should be called again after all (none delayed) wants
  */
 #define SCIP_DECL_PROPPRESOL(x) SCIP_RETCODE x (SCIP* scip, SCIP_PROP* prop, int nrounds, \
       int nnewfixedvars, int nnewaggrvars, int nnewchgvartypes, int nnewchgbds, int nnewholes, \
